fix max-height being too small

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -147,7 +147,7 @@ body {
     list-style-type: none;
     margin-left: 1.5rem;
     margin-top: 0.5rem;
-    max-height: 320px;
+    max-height: 350px;
     overflow: hidden;
 }
 
@@ -158,7 +158,7 @@ body {
 
 .slideDown-leave-from,
 .slideDown-enter-to {
-    max-height: 320px;
+    max-height: 350px;
 }
 
 .sub-list li {
